--- a/package.json
+++ b/package.json
@@ -7,15 +7,13 @@
     "url": "git+https://github.com/conkerhell/novo-rumo-template.git"
   },
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/conkerhell/novo-rumo-template/issues"
-  },
   "devDependencies": {
-    "gulp": "^3.9.1",
-    "gulp-uglify": "^2.0.0"
+    "browser-sync": "^2.14.0",
+    "gulp": "3.9.1",
+    "gulp-notify": "^3.2.0",
+    "gulp-sass": "3.1.0"
   },
   "dependencies": {
-    "angular": "^1.6.6",
-    "browser-sync": "^2.14.0"
+    "foundation-sites": "^6.4.2"
   }
 }
