--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
   },
   "license": "ISC",
   "devDependencies": {
-    "browser-sync": "^2.14.0",
+    "browser-sync": "2.14.0",
     "gulp": "3.9.1",
-    "gulp-notify": "^3.2.0",
-    "gulp-sass": "3.1.0"
+    "gulp-notify": "3.2.0",
+    "gulp-rename": "1.2.2",
+    "gulp-sass": "3.1.0",
+    "gulp-uglify": "3.0.0",
+    "gulp-clean-css": "2.0.12"
   },
   "dependencies": {
-    "foundation-sites": "^6.4.2"
+    "foundation-sites": "6.4.2"
   }
 }
