--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   "devDependencies": {
     "browser-sync": "2.14.0",
     "gulp": "3.9.1",
+    "gulp-clean-css": "2.0.12",
     "gulp-notify": "3.2.0",
     "gulp-rename": "1.2.2",
     "gulp-sass": "3.1.0",
-    "gulp-uglify": "3.0.0",
-    "gulp-clean-css": "2.0.12"
+    "gulp-uglify": "3.0.0"    
   },
   "dependencies": {
     "foundation-sites": "6.4.2",
