--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "novo-rumo-template",
   "version": "1.0.0",
-  "description": "Estrutura do template visual para o associação Novo Rumo.",
+  "description": "Estrutura visual para a Associação Novo Rumo.",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/conkerhell/novo-rumo-template.git"
